Adding diagram to slides

--- a/docs/pres.tex
+++ b/docs/pres.tex
@@ -128,4 +128,10 @@ connected to.
 \end{itemize}
 \end{frame}
 
+\begin{frame}[plain]
+\begin{center}
+\includegraphics[width=0.95\textwidth]{img/darpooling.png}
+\end{center}
+\end{frame}
+
 \end{document}
