Added caption to diagram

--- a/docs/pres.tex
+++ b/docs/pres.tex
@@ -129,9 +129,18 @@ connected to.
 \end{frame}
 
 \begin{frame}[plain]
+\begin{figure}
 \begin{center}
 \includegraphics[width=0.95\textwidth]{img/darpooling.png}
 \end{center}
+\begin{flushleft}
+\caption{Diagram of a Darpooling network. On the left multiple Client Nodes
+(PCs, PDAs, smartphones, etc.) are connected to a single Service Node.
+The Service
+Node is itself connected to other Service Nodes, as depicted on the right.
+}
+\end{flushleft}
+\end{figure}
 \end{frame}
 
 \end{document}
